# SANATORIUMS_MEDIA_OS

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  hotelcut.cmd  hotelcut.ps1  project_status.json  pyproject.toml
.github/workflows/: codeql.yml  python-app.yml
00_Core/: Sanatoriums_Media_AI_Core.md
01_Agents/: Media_Production_Lead_Assistant.md  Photo_Description_Agent.md  Quality_Control_Agent.md  Shooting_Checklist_Agent.md
apps-script/: main.gs
config/: folder_map.json
docs/: ARCHITECTURE.md  DEMO_RUNBOOK.md  PROJECT_MEMORY.md  REPOSITORY_MAP.md  ai-instructions.md  table-structure.md  workflow.md
docs/examples/: README.md  hotel-folder-hamilton.txt
docs/history/: README.md  hotelcut-chatgpt-memory-original.md
examples/: weekly-report.md
experiments/: README.md
experiments/after-effects/: README.md  Sanatoriums_Info_List_v1.jsx  Sanatoriums_Info_List_v2.jsx
outputs/: olymp-iv-metadata-validation.json  olymp-iv-metadata.json  olymp-iv-scan.json
prompts/: 01-audit-table.md  02-create-formulas.md  03-debug-apps-script.md
src/hotelcut/: __init__.py  __main__.py  cli.py  metadata.py  scanner.py
templates/: statuses.md
tests/: test_demo_contract.py  test_metadata.py  test_olymp_metadata_integration.py  test_scanner.py
tools/: install_ffmpeg.ps1  sanitize_demo_reports.py
