[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hotelcut"
version = "0.1.0"
description = "Local HOTELCUT media preparation pipeline"
requires-python = ">=3.10,<3.13"
dependencies = []

[project.scripts]
hotelcut = "hotelcut.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hotelcut = ["data/*.json"]
